# stac-populator

./: Makefile  README.md  pyproject.toml
STACpopulator/: logging.py  populator_base.py  stac_utils.py
STACpopulator/extensions/: cmip6.py  datacube.py
STACpopulator/implementations/CMIP6_UofT/: add_CMIP6.py  collection_config.yml
STACpopulator/implementations/DirectoryLoader/: crawl_directory.py
STACpopulator/implementations/NEX_GDDP_UofT/: add_NEX-GDDP.py  collection_config.yml
tests/: test_standalone_stac_item.py
tests/data/: stac_item_testdata_xclim_cmip6_ncml.json
