[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[tool]
[tool.setuptools.packages.find]
exclude = [
  ".deprecated",
  ".pytest_cache",
  "__pycache__",
  "__pycache__.*",
  "__pycache__*",
  "STACpopulator.__pycache__*",
  "tests*",
]
include = ["STACpopulator*"]

[tool.setuptools.package-data]
STACpopulator = ["**/collection_config.yml"]

[tool.pytest.ini_options]
norecursedirs = [
  ".*",
  "build",
  "dist",
  "{arch}",
  "*.egg",
  "venv",
  "requirements*",
  "lib",
]
python_files = "test*.py"
# these break debugger breakpoints
# add them manually with 'make test-cov'
#addopts = [
#    "--cov",
#    "--cov-report=term",
#    "--cov-report=html",
#]
markers = [
  "online",
]

[tool.coverage.html]
directory = "reports/coverage/html"

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.bumpversion]
allow_dirty = true
commit = true
commit_args = "--no-verify"
current_version = "0.6.0"
message = "Version updated from {current_version} to {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev\\d+)?"
serialize = [
  "{major}.{minor}.{patch}.dev{distance_to_latest_tag}",
  "{major}.{minor}.{patch}",
]
tag = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "STACpopulator/__init__.py"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "Makefile"
replace = "APP_VERSION ?= {new_version}"
search = "APP_VERSION ?= {current_version}"

[[tool.bumpversion.files]]
filename = "docker/Dockerfile"
replace = "LABEL version=\"{new_version}\""
search = "LABEL version=\"{current_version}\""

[[tool.bumpversion.files]]
filename = "CHANGES.md"
replace = """
## [Unreleased](https://github.com/crim-ca/stac-populator) (latest)

<!-- insert list items of new changes here -->

## [{new_version}](https://github.com/crim-ca/stac-populator/tree/{new_version}) ({now:%Y-%m-%d})
"""
search = "## [Unreleased](https://github.com/crim-ca/stac-populator) (latest)"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
# ensure the regex does not match another version by mistake using the package name as guide
regex = true
replace = "name = \"STACpopulator\"\nversion = \"{new_version}\""
search = "^name = \"STACpopulator\"\nversion = \"{current_version}\"$"

[project]
authors = [
  {name = "Francis Charette-Migneault", email = "francis.charette-migneault@crim.ca"},
  {name = "Deepak Chandan", email = "dchandan@cs.toronto.edu"},
  {name = "David Huard", email = "huard.david@ouranos.ca"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Utilities",
]
dependencies = [
  "colorlog",
  "pyyaml",
  "siphon",
  "pystac",
  "xncml>=0.3.1", # python 3.12 support
  "pydantic>=2",
  "pyessv",
  "requests",
  "lxml",
  "jsonschema",
  "marble-client",
  "responses",
]
description = "Utility to populate STAC Catalog, Collections and Items from various dataset/catalog sources."
keywords = [
  "STAC",
  "SpatioTemporal Asset Catalog",
  "Data Ingestion",
  "THREDDS",
  "CMIP6",
]
license = {file = "LICENSE"}
maintainers = [
  {name = "Francis Charette-Migneault", email = "francis.charette-migneault@crim.ca"},
  {name = "Deepak Chandan", email = "dchandan@cs.toronto.edu"},
  {name = "David Huard", email = "huard.david@ouranos.ca"},
]
name = "STACpopulator"
readme = "README.md"
requires-python = ">=3.10"
version = "0.6.0"

[project.scripts]
stac-populator = "STACpopulator.cli:main"

[project.urls]
Changelog = "https://github.com/crim-ca/stac-populator/blob/master/CHANGES.md"
Repository = "https://github.com/crim-ca/stac-populator"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "responses",
  "bump-my-version",
  "jsonschema",
  "pystac[validation]>=1.9.0",
]
